--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   display: none;
 }
 
-.car{
+.car,.enemy{
   width: 50px;
   height: 100px;
   background: transparent url("./image/player.png") center / cover no-repeat;
@@ -25,4 +25,37 @@
   height: 50px;
   background: #fff;
   left: 145px;
+}
+.start{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  margin: 0;
+  padding: 2rem 0 ;
+  text-align: center;
+  z-index: 200;
+  color: #fff;
+  font-size: 1.5rem;
+  background: #000;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: 700;
+}
+.score{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  margin: 0;
+  padding: 1rem 0 ;
+  text-align: center;
+  z-index: 200;
+  color: #fff;
+  font-size: 1.5rem;
+  background: #000;
+  cursor: pointer;
+  font-family: sans-serif;
+  font-weight: 700;
+}
 }
